@@ -2,6 +2,8 @@
  - fix: correctly handle missing features on data export (#80)
  - setup: bump dclab from 0.34.2 to 0.34.3 (set R_HOME)
  - build: bumpy rpy2 from 3.4.2 to 3.4.5
+ - build: bumpy pyqtgraph from 0.12.1 to 0.12.2 and remove
+   colorbar export workarounds
 2.6.6
  - fix: false alarms about wrong pyqtgraph version on startup
    (removed the responsible code, because there are now more regular
